[package]
name = "atomic_queue"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false
